2010-02-17  H.J. Lu  <hongjiu.lu@intel.com>
	    Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S: Fix typo in unwind info.
	Clean up a bit.

2010-02-17  Carl Fredrik Hammar  <hammy.lite@gmail.com>

	* hurd/hurdioctl.c (tiocsctty): Only get FD ports, do work in...
	(tiocsctty_port): ...this new function.

	* hurd/hurd/ioctl.h (_HURD_HANDLE_IOCTLS_1): Cast to
	`ioctl_handler_t'.

2010-02-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i686/multiarch/memcmp-sse4.S: Fix unwind info.
	* sysdeps/i386/i686/multiarch/memcmp-ssse3.S: Likewise.
	* sysdeps/i386/i686/multiarch/strcmp-sse4.S: Likewise.
	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S: Likewise.

	* sysdeps/i386/i686/multiarch/strcmp-sse4.S: Don't fall through to
	undefined code.

2010-02-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/Makefile (sysdep_routines): Add
	strcmp-ssse3, strcmp-sse4, strncmp-c, strncmp-ssse3, strncmp-sse4,
	memcmp-c, memcmp-ssse3, and memcmp-sse4.
	* sysdeps/i386/i686/multiarch/memcmp-sse4.S: New file.
	* sysdeps/i386/i686/multiarch/memcmp-ssse3.S: New file.
	* sysdeps/i386/i686/multiarch/memcmp.S: New file.
	* sysdeps/i386/i686/multiarch/strcmp-sse4.S: New file.
	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S: New file.
	* sysdeps/i386/i686/multiarch/strcmp.S: New file.
	* sysdeps/i386/i686/multiarch/strncmp-c.c: New file.
	* sysdeps/i386/i686/multiarch/strncmp-sse4.S: New file.
	* sysdeps/i386/i686/multiarch/strncmp-ssse3.S: New file.
	* sysdeps/i386/i686/multiarch/strncmp.S: New file.

2010-02-12  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/powerpc/powerpc32/dl-machine.h: Removed old PPC_REL16 check.
	* sysdeps/powerpc/powerpc32/dl-machine.h: Likewise.
	* sysdeps/powerpc/powerpc32/elf/start.S: Likewise.
	* sysdeps/powerpc/powerpc32/memset.S: Likewise.
	* sysdeps/powerpc/powerpc32/power5/fpu/w_sqrt.S: Likewise.
	* sysdeps/powerpc/powerpc32/power5/fpu/w_sqrtf.S: Likewise.